12653
The linked issue is also about synthetics getting the annotation.

Explicit def is not allowed:
{code}
scala> @deprecated("nope","forever") def C(i: Int) = new C(i) ; implicit class C(i: Int) { def doubled = i * 2 }
<console>:12: error: method C is defined twice;
  the conflicting method C was defined at line 12:42
       @deprecated("nope","forever") def C(i: Int) = new C(i) ; implicit class C(i: Int) { def doubled = i * 2 }
                                                                               ^
{code}
